--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,23 @@
+logs
+!logs/.gitkeep
+
+dist
+tmp
+out-tsc
 target
 node_modules
 
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
+
+### IntelliJ IDEA ###
 .idea
+*.iws
 *.iml
+*.ipr
