build index and read big files

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # spring
-logging.path=./logs
-logging.file.max-size=100GB
+#logging.path=./logs
+#logging.file.max-size=100GB
 # application
 backend.log.path=./logs
