--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "bootstrap": "^4.1.1",
+    "classlist.js": "^1.1.20150312",
     "core-js": "^2.5.4",
     "material-design-icons": "^3.0.1",
     "rxjs": "^6.0.0",
